tests/baselines/reference/extendsClauseAlreadySeen2.errors.txt
==== tests/cases/compiler/extendsClauseAlreadySeen2.ts (1 errors) ====
    class C<T> {
    
    }
    class D<T> extends C<number> extends C<string> {
                                 ~~~~~~~~~~~~~~~~~
!!! extendsClauseAlreadySeen2.ts(4,30): error TS1024: 'extends' clause already seen.
        baz() { }
    }